# power-supply-dashboard-analysis

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/interim/: .gitignore
data/processed/: .gitignore  ge_make_dataset.dvc
data/raw/: .gitignore  Hydro Ottawa_Electric_2024-08-01-2024-08-14.xml.dvc  green_button_data_1723657483476.xml.dvc  gridemissions_bulk_file.tar.gz.dvc
docs/: Makefile  conf.py  first-time-setup.md  getting-started.md  make.bat  project-organization.md  user-guide.md
models/final_model/: models.pkl  ts.pkl
notebooks/: analyze_history.ipynb  forecast.ipynb  gridemissions.ipynb  parse_greenbutton.ipynb
power_dashboard/: __init__.py  app.py  eia_api.py  gridemissions_utils.py  load_grid_emissions_history.py  logging_config.py
